--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -35,6 +35,22 @@
     <a href="/posts/<%= post.id %>/edit">Edit</a>
     &nbsp; | &nbsp;
     <a href="/posts/<%= post.id %>/delete">Delete</a>
+
+    <h2><strong><u>Comments</u></strong> </h2>
+    <div class="panel-body">
+      <div class="list-group shadow">
+        <% post.comments.each do |comment| %>
+        <div class="list-group-item">
+        <strong><%= link_to comment.user.email, user_path(comment.user) %></strong> - <%= comment.content %>
+        <br>
+        <!-- <a href="/posts/<%= post.id %>/edit">Reply</a>
+        &nbsp; | &nbsp;
+        <a href="/comments/<%= post.id %>/delete">Delete</a> -->
+
+        </div>
+        <% end %>
+      </div>
+    </div>
   </div>
 </form>
 <% end %>
