--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,6 +27,8 @@
 <form class="post shadow">
   <div id="contact">
     <h2><strong><%= post.title %></strong> </h2><br><br>
+    <p>Created on: <%= post.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
+    <br>
     <%= post.embed.html_safe %><br><br>
     <div class="description">
     <h4><%= post.description %></h4>
@@ -36,7 +38,7 @@
     &nbsp; | &nbsp;
     <a href="/posts/<%= post.id %>/delete">Delete</a>
 
-    <h2><strong><u>Comments</u></strong> </h2>
+    <h5><strong><u>Comments</u></strong> </h5>
     <div class="panel-body">
       <div class="list-group shadow">
         <% post.comments.each do |comment| %>
