--- a/public/css/parts.css
+++ b/public/css/parts.css
@@ -358,6 +358,7 @@ font: 1.8em "Trebuchet MS", Arial, sans-serif;
 padding: 10px 305px 10px;
 border: solid #000 1px;
 background: #333;
+border-radius: 12px;
 }
 h4 {
 font-size: 12px;
@@ -365,6 +366,7 @@ text-align: center;
 }
 h2 {
  font-size: 1.1em;
+
 }
 h1 {
 text-align: center;
@@ -375,6 +377,7 @@ padding: 10px;
 border: solid #000 1px;
 background: #333;
 margin: 50px 170px 50px;
+border-radius: 12px;
 }
 .parts {
 margin-bottom: 2vh;
