added reply model added reply controller added replies to news_feeds index

--- a/app/views/news_feeds/index.html.erb
+++ b/app/views/news_feeds/index.html.erb
@@ -39,14 +39,15 @@
                <div class="panel-body">
                  <div class="list-group shadow">
                    <% post.comments.each do |comment| %>
+                    <%@c = comment  %>
                    <div class="list-group-item">
-                   <strong><%= link_to comment.user.email, user_path(comment.user) %></strong> - <%= comment.content %>
+                   <strong><%= link_to comment.user.email, user_path(comment.user) %></strong> - <%= comment.content %><a data-target="#postModal<%= @c.id %>" id ="add-button" role="button" data-toggle="modal"><span class="badge">Reply</span></a>
                    <br>
-                   <!-- <a href="/posts/<%= post.id %>/edit">Reply</a>
-                   &nbsp; | &nbsp;
-                   <a href="/comments/<%= post.id %>/delete">Delete</a> -->
-
+                   <% comment.replies.each do |reply| %>
+                   <strong><%= link_to reply.user.email, user_path(reply.user) %></strong> - <%= reply.content %>
+                   <% end %>
                    </div>
+
                    <% end %>
                  </div>
                </div>
@@ -54,7 +55,40 @@
             <br>
          </div>
       </form>
+
    </div>
+
+
+
+   <div id="postModal<%= @c.id %>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+               Reply
+            </div>
+            <div class="modal-body">
+               <!-- <form action="/posts/new" method=POST class="form center-block" autocomplete="on">
+                  <div class="form-group">
+                    <textarea class="form-control input-lg" name = "title" autofocus="" placeholder="Title" required></textarea>
+                    <textarea class="form-control input-lg" name = "embed" autofocus="" placeholder="Video Embed"></textarea>
+                    <textarea class="form-control input-lg" name = "description" rows="8" cols="80" autofocus="" placeholder="Description" required></textarea>
+                  </div>
+                  <input class="btn btn-primary btn-sm" type="submit" value="Submit" id="submit">
+                  </form> -->
+               <%= form_for Reply.new, :class => 'form center-block' do |f| %>
+               <div class="form-group">
+                  <%= f.hidden_field :comment_id, :value => @c.id %>
+                  <%= f.text_area :content, placeholder: "Content", :required => true, :class => 'form-control input-lg ' %><br>
+               </div>
+               <%= f.submit "Submit", :class => 'btn btn-primary btn-sm', :id => 'submit' %>
+               <% end %>
+            </div>
+         </div>
+      </div>
+   </div>
+
+
    <div id="postModal<%= post.id %>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
          <div class="modal-content">
@@ -83,6 +117,7 @@
       </div>
    </div>
    <% end %>
+
 </body>
 <footer class="light-fade">
    &copy; 2019 Van Builder. All Rights Reserved.
