--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="/css/user_index.css">
           <link rel="stylesheet" href="/css/nav_social.css">
         <!-- Fonts -->
+        <link rel="shortcut icon" type="/public/img/black_white.png/x-icon" href="favicon.ico" />
+
         <link rel="icon" href="/public/img/black_white.png/favicon.jpg">
         <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
