added the id of new_part to the part form

--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -40,20 +40,7 @@
   			Add Part
         </div>
         <div class="modal-body">
-            <!-- <form action="/parts/new" method=POST class="form center-block" autocomplete="on">
-              <div class="form-group">
-                <textarea class="form-control input-lg" name = "manufacturer" autofocus="" placeholder="Manufacturer"></textarea>
-                <textarea class="form-control input-lg" name = "name" autofocus="" placeholder="Part Name" required></textarea>
-                <textarea class="form-control input-lg" name = "price" autofocus="" placeholder="Price" required></textarea>
-                <textarea class="form-control input-lg" name = "qty" autofocus="" placeholder="Quantity" required>1</textarea>
-                <textarea class="form-control input-lg" name = "description" autofocus="" placeholder="Description"></textarea>
-              </div>
-              <input class="btn btn-primary btn-sm" type="submit" value="Submit" id="submit">
-            </form> -->
-
-
-
-            <%= form_for Part.new, :class => 'form center-block' do |f| %>
+            <%= form_for Part.new, :id => 'new_part', :class => 'form center-block' do |f| %>
             <div class="form-group">
             <%= f.text_field :manufacturer, placeholder: "Manufacturer", :class => 'form-control input-lg ' %><br>
             <%= f.text_field :name, placeholder: "Name", :class => 'form-control input-lg' %><br>
@@ -61,13 +48,8 @@
             <%= f.text_field :qty, placeholder: "Quantity", value: 1,:class => 'form-control input-lg ' %> <br>
             <%= f.text_field :description, placeholder: "Description", :class => 'form-control input-lg' %><br>
             </div>
-
             <%= f.submit "Submit", :class => 'btn btn-primary btn-sm', :id => 'submit' %>
-
             <% end %>
-
-
-
         </div>
         </div>
     </div>
